--- a/VCS/AEON/New Group/Cell/messaging_cell/sender_cell/SendPhotoTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/sender_cell/SendPhotoTableViewCell.xib
@@ -37,37 +37,25 @@
                                     <constraint firstAttribute="trailing" secondItem="kCO-yb-zIE" secondAttribute="trailing" constant="5" id="s8z-pW-Lf0"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="TpU-5t-cSF" customClass="CardView" customModule="AEONMember" customModuleProvider="target">
-                                <rect key="frame" x="65" y="44" width="270" height="300"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aeon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="d3I-kg-TbR">
-                                        <rect key="frame" x="0.0" y="0.0" width="270" height="300"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="300" id="X5c-Cj-X9H"/>
-                                            <constraint firstAttribute="width" constant="270" id="txN-SJ-eec"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aeon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="d3I-kg-TbR">
+                                <rect key="frame" x="65" y="39" width="270" height="300"/>
                                 <constraints>
-                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="leading" secondItem="TpU-5t-cSF" secondAttribute="leading" id="3dy-hD-aIh"/>
-                                    <constraint firstAttribute="trailing" secondItem="d3I-kg-TbR" secondAttribute="trailing" id="KPn-4H-4r7"/>
-                                    <constraint firstAttribute="bottom" secondItem="d3I-kg-TbR" secondAttribute="bottom" id="iIi-QQ-SOX"/>
-                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="top" secondItem="TpU-5t-cSF" secondAttribute="top" id="zQZ-Tq-0si"/>
+                                    <constraint firstAttribute="height" constant="300" id="X5c-Cj-X9H"/>
+                                    <constraint firstAttribute="width" constant="270" id="txN-SJ-eec"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="5"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
-                            </view>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="TpU-5t-cSF" secondAttribute="trailing" constant="10" id="9rc-o1-y0R"/>
                             <constraint firstAttribute="bottom" secondItem="jim-tw-5OA" secondAttribute="bottom" constant="10" id="E9V-AY-v7M"/>
+                            <constraint firstItem="jim-tw-5OA" firstAttribute="top" secondItem="d3I-kg-TbR" secondAttribute="bottom" constant="10" id="Iak-uV-qTb"/>
                             <constraint firstAttribute="trailing" secondItem="jim-tw-5OA" secondAttribute="trailing" constant="10" id="KWi-bK-IEK"/>
-                            <constraint firstItem="jim-tw-5OA" firstAttribute="top" secondItem="TpU-5t-cSF" secondAttribute="bottom" constant="5" id="VAn-RX-Co3"/>
+                            <constraint firstAttribute="trailing" secondItem="d3I-kg-TbR" secondAttribute="trailing" constant="10" id="hMj-16-2xS"/>
                             <constraint firstItem="jim-tw-5OA" firstAttribute="leading" secondItem="EMf-az-v6B" secondAttribute="leading" constant="10" id="iVL-XI-Xfo"/>
                         </constraints>
                     </view>
