--- a/VCS/AEON/New Group/Cell/sec_ques_register_cell/SecQuesRegisterTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/sec_ques_register_cell/SecQuesRegisterTableViewCell.xib
@@ -25,20 +25,20 @@
                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pLT-c5-y6H">
                         <rect key="frame" x="16" y="11" width="394" height="140"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="iWa-uG-zUD">
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="iWa-uG-zUD">
                                 <rect key="frame" x="10" y="10" width="374" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Q:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHD-tU-bNQ">
-                                        <rect key="frame" x="0.0" y="7.5" width="30" height="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Q10:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHD-tU-bNQ">
+                                        <rect key="frame" x="0.0" y="8.5" width="50" height="23.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="30" id="hBJ-Sl-YC3"/>
+                                            <constraint firstAttribute="width" constant="50" id="eWl-qv-VCN"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
+                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="15"/>
                                         <color key="textColor" red="0.82406836750000001" green="0.1919207275" blue="0.63621109720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWH-8q-SMK">
-                                        <rect key="frame" x="53" y="20" width="258" height="0.0"/>
+                                        <rect key="frame" x="52" y="20" width="280" height="0.0"/>
                                         <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
                                         <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -47,11 +47,11 @@
                                         <rect key="frame" x="334" y="0.0" width="40" height="40"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="pBf-fj-pg9">
-                                                <rect key="frame" x="8" y="12.5" width="30" height="15"/>
+                                                <rect key="frame" x="13" y="13.5" width="25" height="13"/>
                                                 <color key="tintColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="30" id="PRf-hr-ed5"/>
-                                                    <constraint firstAttribute="height" constant="15" id="TF7-Ka-Cfn"/>
+                                                    <constraint firstAttribute="width" constant="25" id="PRf-hr-ed5"/>
+                                                    <constraint firstAttribute="height" constant="13" id="TF7-Ka-Cfn"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
@@ -72,20 +72,20 @@
                             <stackView opaque="NO" contentMode="scaleAspectFit" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="lvE-5k-mTA">
                                 <rect key="frame" x="10" y="55" width="374" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ans:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gI-Be-aQg">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="50"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ans:10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gI-Be-aQg">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="mL4-bD-xkQ"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="50" id="mL4-bD-xkQ"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
+                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="15"/>
                                         <color key="textColor" red="0.76862745099999996" green="0.18039215689999999" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="DzR-ga-LFi">
-                                        <rect key="frame" x="42" y="0.0" width="332" height="50"/>
+                                        <rect key="frame" x="52" y="0.0" width="322" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fBB-6k-lfX">
-                                                <rect key="frame" x="0.0" y="0.0" width="332" height="12"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="322" height="12"/>
                                                 <attributedString key="attributedText">
                                                     <fragment content="error">
                                                         <attributes>
@@ -98,7 +98,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gqP-xR-RUR">
-                                                <rect key="frame" x="0.0" y="15" width="332" height="35"/>
+                                                <rect key="frame" x="0.0" y="15" width="322" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="cv0-Xq-qfF"/>
                                                 </constraints>
